# ar-aging-dashboard

./: README.md
dagster-ar/: .gitignore  README.md  example.env  pyproject.toml
dagster-ar/src/common/db/: customers.py  invoices.py  payments.py
dagster-ar/src/common/types/: account.py  customers.py  invoice.py  payments.py
dagster-ar/src/dagster_ar/: definitions.py
dagster-ar/src/dagster_ar/defs/: daily_partitions.py  jobs.py  partitions.py  schedules.py
dagster-ar/src/dagster_ar/defs/assets/: invoices.py  partitioned_invoices.py
dagster-ar/src/dagster_ar/defs/resources/: api_client_resource.py  database.py  unified.py
heronai/: .gitignore  CONTRIBUTORS.txt  LICENSE  README.md  docker-compose.docs.yml  example.env  manage.py  pyproject.toml
heronai/config/: urls.py  wsgi.py
heronai/config/settings/: base.py  local.py  production.py  test.py
heronai/docs/: Makefile  conf.py  howto.rst  index.rst  make.bat  users.rst
heronai/heronai/: conftest.py
heronai/heronai/customers/: apps.py  models.py
heronai/heronai/customers/migrations/: 0001_initial.py  0002_customer_customer_id.py
heronai/heronai/invoices/: admin.py  apps.py  models.py  urls.py  views.py
heronai/heronai/invoices/migrations/: 0001_initial.py
heronai/heronai/payments/: apps.py  models.py
heronai/heronai/payments/migrations/: 0001_initial.py
heronai/heronai/templates/: base.html
heronai/heronai/templates/invoices/: invoice_list.html
heronai/heronai/users/: adapters.py  apps.py  models.py  views.py
heronai/heronai/users/migrations/: 0001_initial.py
(+11 files in other folders)
